# ChangeLog for app-emacs/matlab
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/matlab/ChangeLog,v 1.18 2009/01/29 02:23:48 fauli Exp $

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  -files/50matlab-gentoo.el, -matlab-2.2.3.ebuild:
  clean up

  27 Aug 2008; Ulrich Mueller <ulm@gentoo.org>
  matlab-3.1.0_pre20070306.ebuild:
  Use eclass default instead of elisp-comp, bug 235442.

  23 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  matlab-3.1.0_pre20070306.ebuild:
  sparc stable wrt #206584

  18 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  matlab-3.1.0_pre20070306.ebuild:
  stable amd64

  18 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  matlab-3.1.0_pre20070306.ebuild:
  stable x86

*matlab-3.1.0_pre20070306 (18 Dec 2007)

  18 Dec 2007; Ulrich Mueller <ulm@gentoo.org> +files/51matlab-gentoo.el,
  +matlab-3.1.0_pre20070306.ebuild:
  Add current CVS snapshot.

  27 Oct 2007; Christian Faulhammer <opfer@gentoo.org> matlab-2.2.3.ebuild:
  updated HOMEPAGE, set SITEFILE to a more generic value, removed unnecessary
  dependency on virtual/emacs (provided by elisp.eclass already)

  08 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/50matlab-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  26 Jan 2006; Matthew Kennedy <mkennedy@gentoo.org> matlab-2.2.3.ebuild:
  Update HOMEPAGE; Ebuild cleanup; Resolves Bug# 110419.

  24 Oct 2005; Joseph Jezak <josejx@gentoo.org> matlab-2.2.3.ebuild:
  Marked ~ppc.

  05 Apr 2005; Simon Stelling <blubb@gentoo.org> matlab-2.2.3.ebuild:
  added ~amd64

  19 Jun 2004; Jason Wever <weeve@gentoo.org> matlab-2.2.3.ebuild:
  Stable on sparc.

  10 May 2004; Jason Wever <weeve@gentoo.org> matlab-2.2.3.ebuild:
  Added ~sparc keyword to help resolve bug #50695.
