@@ -1,5 +1,7 @@
 AUX 51matlab-gentoo.el 492 RMD160 b881f899369d49545d770874fce250e47d8b6cdf SHA1 a7aa2f5242e1155903f0c267640066359408f5ca SHA256 d932b3f5196187ba93c2b77567dfc7e4ae5502dd1376c349aef35623c70cfb39
 DIST matlab-3.1.0_pre20070306.tar.bz2 69566 RMD160 74f3ea7931803a077667140892e2add08de858bc SHA1 e67dac5ebe4535effdcc886398f52196a066ed90 SHA256 5956b47b8b17d342e64d9660be6c262f3935f15157274837dca6e85be17a080b
+DIST matlab-3.3.0_pre20091116.tar.bz2 86486 RMD160 3140bc508c80a3588dd5c16c53aa812286d899a8 SHA1 1fa907bf905a702827edfe4244df414310d14856 SHA256 7bf720119f21de309ce5a1a7084ab6538b3318621a4cf8f1bc466203c9c2feec
 EBUILD matlab-3.1.0_pre20070306.ebuild 607 RMD160 1fc2c454ce9c8ef22a15b7ce457a07adb834eed6 SHA1 6722b23fa3f752611f4c0739b91945a2c41ab248 SHA256 0d4d4145a5f812ccfd6cf791519ad58a858228dd28f65925fb96e2631ef6dd7f
-MISC ChangeLog 2172 RMD160 9f413ab4490df05fe51aab4af52c23dcb8918226 SHA1 a8e212a2666db231ab315cfcf8374cd0e04e5379 SHA256 3aa66d172a45bed17488ea500e66720279fe99e70fa18c694a110e1ad5d93721
+EBUILD matlab-3.3.0_pre20091116.ebuild 597 RMD160 1248fc3299eda4d786aa37a98d4a9e957e6526ad SHA1 b58ccea9ac145ef047a6ce8a86f6cbf224faf33a SHA256 e5ebf65197bb4631c36c6ea7162f922cfd7da337350062a6c508969f8d4a11dc
+MISC ChangeLog 2335 RMD160 dda2d85dcbfa8ec412048a04e53332b6f227026d SHA1 086aed823d920315ae38376d9257fc2fcab3815a SHA256 ccda58a559e41d4a716ede5c7a370003cc13f656d91f053ce8621274bb8de46c
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
